OLD/kubernetes-cluster/minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: minio
spec:
  ingressClassName: nginx
  tls:
    - secretName: minio-ssl
      hosts:
      - minio.vps-2.cluster-4.de              
  rules:
  - host: "minio.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: minio-service
              port:
                number: 80
